# centrai-app

./: MVP_DESIGN.md
backend/: .env.example  .gitignore  README.md  pyproject.toml  pytest.ini
backend/app/: config.py  main.py
backend/app/agents/: config.py
backend/app/services/: audio_processor.py  llm_service.py  stt_service.py  tts_service.py
backend/app/websocket/: handlers.py  manager.py  types.py
backend/docs/: MVP_PLAN.md
backend/tests/integration/: test_websocket_basic.py
backend/tests/unit/: test_agent_config.py  test_audio_processor.py  test_config.py  test_connection_manager.py  test_llm_service.py  test_stt_service.py  test_tts_service.py  test_websocket_types.py
frontend/: index.html  package-lock.json  package.json
frontend/docs/: MVP_PLAN.md  brand_guidelines.md  design_guidelines.md
frontend/src/: routeTree.gen.ts  styles.css
frontend/src/components/: Header.tsx
frontend/src/components/layout/: AppLayout.tsx  Sidebar.tsx
frontend/src/components/ui/: ThemeToggle.tsx  button.tsx  card.tsx
frontend/src/components/voice-agent/: AgentCard.tsx  AgentHeader.tsx  AgentSelector.tsx  AudioVisualizer.tsx  ConversationDisplay.tsx  PromptDisplay.tsx  RecordButton.tsx  StatusIndicator.tsx  VoiceInterface.tsx  VoiceRecorder.tsx
frontend/src/hooks/: useAudioPlayer.ts  useAudioRecorder.ts  useTheme.ts  useVoiceAgent.ts  useWebSocket.ts
frontend/src/lib/: agents.ts
frontend/src/lib/audio/: player.ts  utils.ts  (+1 more)
frontend/src/routes/: index.tsx
frontend/src/store/: voiceAgent.ts
frontend/src/types/: agent.ts  conversation.ts  websocket.ts
(+5 files in other folders)
